Repurpose for generic wandb api service

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-SECRET_KEY=secret
-DEBUG=True
-LOCAL_MODEL_DIR=./ml/model/
-LOCAL_MODEL_NAME=model.pkl
+WANDB_ENTITY=a-sh0ts
+WANDB_PROJECT_NAME=ner_drugs
+MODEL_ARTIFACT_NAME=promoted_model
+MODEL_ARTIFACT_VERSION=latest
+WANDB_API_KEY=your_api_key
