--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 maildir/
-venv/*/**
+venv
 build/
 develop-eggs/
 dist/
@@ -63,3 +63,4 @@ maildir
 
 ml/model/*
 wandb/*
+artifacts
